test/spec_vectors/block/fail/module_149.wat
(module (func $type-break-operand-i64-vs-i32 (result i64) (i32.ctz (block (br 0 (i32.const 9))))))